--- a/templates/users.html
+++ b/templates/users.html
@@ -4,6 +4,9 @@
         <article class="card container fluid"></article>
         <br>
         <!-- Напишите свой код здесь (Вывод свойств объекта User) -->
+         <h2>ID: {{user.id}}</h2>
+         <p>Name: {{user.username}}</p>
+         <p>Age: {{user.age}}</p>
 
     {% else %}
             <section class="container-fluid">
